k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logistics-app
  labels:
    app: logistics
